@@ -493,14 +493,13 @@ cd ~/nco/bld;make ANTLR_ROOT=${HOME} ANTLR_LIB=${MY_LIB_DIR} NETCDF_ROOT='/lustr
 # Sysadmin upgrade request: https://nersc.service-now.com/navpage.do # NERSC Maintainer = Yun (Helen) He
 # Latest ticket to build NCO: INC0118469 on 20180413
 # Latest sysadmin-compiled module usage: 
-# Personal recipe last modified: 20231030 (change to cray-netcdf 4.9.0.7)
+# Personal recipe last modified: 20240112 (remove gsl module)
 # Personal recipe last borken: 20231103
 # Personal recipe last successful: 20231103
 module load PrgEnv-gnu
 module load gcc/11.2.0
 module load cray-hdf5/1.12.2.7
 module load cray-netcdf/4.9.0.7
-module load gsl
 export HDF5_DISABLE_VERSION_CHECK=1
 export HDF5_USE_FILE_LOCKING=FALSE
 #module load udunits
